# eventor

./: README.md  README.rst
eventor/: pyproject.toml
eventor/src/eventor/: eventor.py
